--- a/ExdTech.ImageServer/ExdTech.ImageServer.csproj
+++ b/ExdTech.ImageServer/ExdTech.ImageServer.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExdTech.ImageBlobAccess\ExdTech.Images.BlobAccess.csproj" />
+    <ProjectReference Include="..\ExdTech.ImageBlobAccess\ExdTech.AzureBlobAccess.csproj" />
     <ProjectReference Include="..\ExdTech.ImageFileValidation\ExdTech.ImageFileValidation.csproj" />
     <ProjectReference Include="..\ExdTech.ImageProcessing\ExdTech.ImageProcessing.csproj" />
     <ProjectReference Include="..\ExdTech.ImageServer.Contract\ExdTech.ImageServer.Contract.csproj" />
