--- a/ExdTech.ImageProcessing/ExdTech.ImageProcessing.csproj
+++ b/ExdTech.ImageProcessing/ExdTech.ImageProcessing.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExdTech.ImageServer.Contract\ExdTech.ImageServer.Contract.csproj" />
+  </ItemGroup>
+
 </Project>
