Moved hardcoded variables to config. Implemented DI for FIleValidator and ImageProcessor.

--- a/ExdTech.ImageServer/appsettingsTemplate.json
+++ b/ExdTech.ImageServer/appsettingsTemplate.json
@@ -1,21 +1,34 @@
 {
-  "ImageStoreConnectionString": "<YourAzureBlobStore>",
+  // Configuration for Azure B2C authentication. 
+  // If not using this you should also remove the references to it in the Startup class and remove ScopesRequirement.
+  {
+    "AzureAdB2C": {
+      "Instance": "https://cpicusers.b2clogin.com",
+      "ClientId": "<Your client Id for this app>",
+      "Domain": "<Your Azure AD domain>"
+    },
 
-  //Name of container in Azure Blob Storage - remove this if using different storage
-  "ContainerClient": "imagefiles",
 
-  "MaxWidthInPixels": 1080,
-  "MaxHeightInPixels": 1080,
-  "MaxFileSizeNotCompressedInBytes": 200000,
-  "MaxFileSizeAcceptedInBytes": 5000000,
-  "CompressionQualityPercentage": 80,
+    "ImageStoreConnectionString": "<YourAzureBlobStore>",
 
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    // Name of container in Azure Blob Storage - remove this if using different storage.
+    // The container must exist. (It is not created programmtically.)
+    "ContainerClient": "imagefiles",
+
+
+    "MaxWidthInPixels": 1080,
+    "MaxHeightInPixels": 1080,
+    "MaxFileSizeNotCompressedInBytes": 200000,
+    "MaxFileSizeAcceptedInBytes": 5000000,
+    "CompressionQualityPercentage": 80,
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
 }
