--- a/ExdTech.ImageFileValidation/ExdTech.ImageFileValidation.csproj
+++ b/ExdTech.ImageFileValidation/ExdTech.ImageFileValidation.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExdTech.ImageServer.Contract\ExdTech.ImageServer.Contract.csproj" />
+  </ItemGroup>
+
 </Project>
