Removed FileValidator. Added ImageProcessingOptions.

--- a/ExdTech.ImageServer/appsettingsTemplate.json
+++ b/ExdTech.ImageServer/appsettingsTemplate.json
@@ -1,7 +1,7 @@
 {
   // Configuration for Azure B2C authentication. 
   // If not using this you should also remove the references to it in the Startup class and remove ScopesRequirement.
-  {
+  
     "AzureAdB2C": {
       "Instance": "https://cpicusers.b2clogin.com",
       "ClientId": "<Your client Id for this app>",
@@ -15,6 +15,9 @@
     // The container must exist. (It is not created programmtically.)
     "ContainerClient": "imagefiles",
 
+    // Optional values. Can be used to prevent resizing.
+    "MaxWidthAccepted": 1080,
+    "MaxHeightAccepted": 1080,
 
     "MaxWidthInPixels": 1080,
     "MaxHeightInPixels": 1080,
@@ -31,4 +34,4 @@
     },
     "AllowedHosts": "*"
   }
-}
+
