--- a/ExdTech.ImageServer/appsettingsTemplate.json
+++ b/ExdTech.ImageServer/appsettingsTemplate.json
@@ -1,37 +1,32 @@
 {
-  // Configuration for Azure B2C authentication. 
-  // If not using this you should also remove the references to it in the Startup class and remove ScopesRequirement.
-  
-    "AzureAdB2C": {
-      "Instance": "https://cpicusers.b2clogin.com",
-      "ClientId": "<Your client Id for this app>",
-      "Domain": "<Your Azure AD domain>"
-    },
+  // This is only needed if you are using this Azure B2C authentication.
+  "AzureAdB2C": {
+    "Instance": "<Instance>",
+    "ClientId": "<ClientId>",
+    "Domain": "<Domain",
+    "SignUpSignInPolicyId": "<Policy>"
+  },
 
+  // Binds to ExdTech.ImageServer.Contract.ImageProcessingOptions.
+  "ImageProcessingConfig": {
+    "MaxWidthAccepted": 1080,   // Not required. Images are rejected if this is exceeded.
+    "MaxHeightAccepted": 1080,  // Not required. Images are rejected if this is exceeded.
+    "MaxWidthInPixels": 1080,   // Images are scaled down if this is exceeded. 
+    "MaxHeightInPixels": 1080,  // Images are scaled down if this is exceeded.
+    "MaxFileSizeNotCompressedInBytes": 200000,  // Images are compressed if this is exceeded.
+    "MaxFileSizeAcceptedInBytes": 5000000,      // Images are rejected if this is exceeded.
+    "CompressionQualityPercentage": 80          // Jpg compression quality to use if compressing.
+  },
 
-    "ImageStoreConnectionString": "<YourAzureBlobStore>",
+  "ImageStoreConnectionString": "<Connection string>",
+  "ContainerClient": "<Container>", // Container must already exist
 
-    // Name of container in Azure Blob Storage - remove this if using different storage.
-    // The container must exist. (It is not created programmtically.)
-    "ContainerClient": "imagefiles",
-
-    // Optional values. Can be used to prevent resizing.
-    "MaxWidthAccepted": 1080,
-    "MaxHeightAccepted": 1080,
-
-    "MaxWidthInPixels": 1080,
-    "MaxHeightInPixels": 1080,
-    "MaxFileSizeNotCompressedInBytes": 200000,
-    "MaxFileSizeAcceptedInBytes": 5000000,
-    "CompressionQualityPercentage": 80,
-
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-    "AllowedHosts": "*"
-  }
-
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*"
+}
