--- a/ExdTech.ImageProcessing/ExdTech.ImageProcessing.csproj
+++ b/ExdTech.ImageProcessing/ExdTech.ImageProcessing.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.24.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
