--- a/ExdTech.ImageServer.Persistence.ImageInfo/ExdTech.ImageServer.Persistence.ImageInfo.csproj
+++ b/ExdTech.ImageServer.Persistence.ImageInfo/ExdTech.ImageServer.Persistence.ImageInfo.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.24.0" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.6" />
   </ItemGroup>
 
   <ItemGroup>
