--- a/ExdTech.ImageServer.Common/ExdTech.ImageServer.Common.csproj
+++ b/ExdTech.ImageServer.Common/ExdTech.ImageServer.Common.csproj
@@ -1,7 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.3</Version>
+    <Authors>Peter Dongan</Authors>
+    <Company />
+    <Description>For clients of an ExdTech ImageServer</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>Peter Dongan</Copyright>
+    <AssemblyVersion>0.0.3.0</AssemblyVersion>
+    <PackageReleaseNotes>Downgraded to .net standard 2.0 for compatibility with UWP</PackageReleaseNotes>
   </PropertyGroup>
 
 </Project>
