--- a/ExdTech.ImageServer.Api/appsettingsTemplate.json
+++ b/ExdTech.ImageServer.Api/appsettingsTemplate.json
@@ -9,14 +9,15 @@
 
   // Binds to ExdTech.ImageServer.Contract.ImageProcessingOptions.
   "ImageProcessingConfig": {
-    "MaxWidthInPixels": 1080,   // Images are scaled down if this is exceeded. 
-    "MaxHeightInPixels": 1080,  // Images are scaled down if this is exceeded.
-    "MaxFileSizeAcceptedInBytes": 5000000,      // Images are rejected if this is exceeded.
-    "CompressionQualityPercentage": 85          // Jpg compression quality to use if compressing.
+    "MaxWidthInPixels": 1080, // Images are scaled down if this is exceeded. 
+    "MaxHeightInPixels": 1080, // Images are scaled down if this is exceeded.
+    "MaxFileSizeAcceptedInBytes": 5000000, // Images are rejected if this is exceeded.
+    "CompressionQualityPercentage": 85 // Jpg compression quality to use if compressing.
   },
 
   "ImageStoreConnectionString": "<Connection string>",
   "ContainerClient": "<Container>", // Container must already exist
+  "ImageInfoConnectionString": "<Connection string>",
 
   "Logging": {
     "LogLevel": {
